--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
-<head>
-</head>
-<body>
-<h1>hello world</h1>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>nedpfeiffer's webpage</title>
+  </head>
+  <body>
+    <h1>~/ned.vc</h1>
+    <h2>Welcome to my site!</h2>
+    <p>
+      My name is Ned, I'm an undergraduate studying psychology and IT. I
+      enjoying hiking climbing and losing money trading cryptocurrencies.
+    </p>
+  </body>
+</html>
