--- a/index.html
+++ b/index.html
@@ -5,13 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>nedpfeiffer's webpage</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <h1>~/ned.vc</h1>
     <h2>Welcome to my site!</h2>
     <p>
-      My name is Ned, I'm an undergraduate studying psychology and IT. I
-      enjoying hiking climbing and losing money trading cryptocurrencies.
+      My name is Ned, I'm an undergraduate studying psychology and IT. I am
+      passionate about cybersecurity, politics, and the impact of technology on
+      society. In my free time I enjoy camping, climbing, and losing money
+      trading cryptocurrency.
     </p>
+    <a href="https://github.com/nedpfeiffer/" target="_blank">Github</a>
+    <a href="https://www.linkedin.com/in/nedpfeiffer/" target="_blank"
+      >LinkedIn</a
+    >
   </body>
 </html>
