--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>nedpfeiffer's webpage</title>
     <link rel="stylesheet" href="style.css" />
+    <link href="/images/gitGreen.png" rel="shortcut icon" type="image/x-icon">
   </head>
 
   <body>
