index.html: add images

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
       society. In my free time I enjoy camping, climbing, and losing money
       trading cryptocurrency.
     </p>
-    <a href="https://github.com/nedpfeiffer/" target="_blank">Github</a>
-    <a href="https://www.linkedin.com/in/nedpfeiffer/" target="_blank"
-      >LinkedIn</a
-    >
+    <a href="https://github.com/nedpfeiffer/" target="_blank"><img>src="/images/github.png" alt="Github"</img></a>
+    <a href="https://www.linkedin.com/in/nedpfeiffer/" target="_blank"><img>src="/images/linkedin.png" alt="LinkedIn"</img></a>
   </body>
 </html>
