--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>nedpfeiffer's webpage</title>
     <link rel="stylesheet" href="style.css" />
     <link href="/images/gitGreen.png" rel="shortcut icon" type="image/x-icon">
-  </head>
+</head>
 
-  <body>
+<body>
     <h1>~/ned.vc</h1>
     <h2>Welcome to my site!</h2>
     <p>
-      My name is Ned, I'm an undergraduate studying psychology and IT. I am
-      passionate about cybersecurity, politics, and the impact of technology on
-      society. In my free time I enjoy camping, climbing, and losing money
-      trading cryptocurrency.
+        My name is Ned, I'm an undergraduate studying psychology and IT. I am
+        passionate about cybersecurity, politics, and the impact of technology on
+        society. When I'm not glued to a terminal or reading the news, I also
+        enjoy hiking, climbing, and exploring new cities.
     </p>
-    <a href="https://github.com/nedpfeiffer/" target="_blank"><img>src="/images/github.png" alt="Github"</img></a>
-    <a href="https://www.linkedin.com/in/nedpfeiffer/" target="_blank"><img>src="/images/linkedin.png" alt="LinkedIn"</img></a>
-  </body>
+    <a href="https://github.com/nedpfeiffer/" target="_blank"><img src="images/github.png" alt="Github"></a>
+    <a href="https://www.linkedin.com/in/nedpfeiffer/" target="_blank"><img src="/images/linkedin.png" alt="LinkedIn"></a>
+</body>
+
 </html>
