edited index.html and created blog directory

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>nedpfeiffer's webpage</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>ned.vc</title>
+    <link rel="stylesheet" href="/style.css" />
     <link href="/images/gitGreen.png" rel="shortcut icon" type="image/x-icon">
 </head>
 
@@ -16,11 +16,19 @@
     <p>
         My name is Ned, I'm an undergraduate studying psychology and IT. I am
         passionate about cybersecurity, politics, and the impact of technology on
-        society. When I'm not glued to a terminal or reading the news, I also
-        enjoy hiking, climbing, and exploring new cities.
+        society. When I'm not glued to a terminal, I also enjoy hiking,
+        climbing, and exploring new cities.
     </p>
-    <a href="https://github.com/nedpfeiffer/" target="_blank"><img src="images/github.png" alt="Github"></a>
+    <h3>Follow my socials!</h3>
+    <a href="https://github.com/nedpfeiffer/" target="_blank"><img src="/images/github.png" alt="Github"></a>
     <a href="https://www.linkedin.com/in/nedpfeiffer/" target="_blank"><img src="/images/linkedin.png" alt="LinkedIn"></a>
+    <h3>Check out my blog!</h3>
+    <a href="/blog/">Coming soon</a>
+    <a href="/blog">Coming soon</a>
+    <a href="blog">Coming soon</a>
+    <h3>Buy me a coffee?</h3>
+    <p>XMR: </p>
+    <p>BTC: </p>
 </body>
 
 </html>
