--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-    <h1>~/ned.vc</h1>
+    <div class="header">
+        <h1><a href="/index.html">~/ned.vc</a></h1>
+    </div>
     <h2>Welcome to my site!</h2>
     <p>
         My name is Ned, I'm an undergraduate studying psychology and IT. I am
@@ -19,16 +21,22 @@
         society. When I'm not glued to a terminal, I also enjoy hiking,
         climbing, and exploring new cities.
     </p>
+    <h3>Check out my blog!</h3>
+    <ul>
+        <li><a href="/blog/">Coming soon</a></li>
+        <li><a href="/blog/">Coming soon</a></li>
+        <li><a href="/blog/">Coming soon</a></li>
+    </ul>
     <h3>Follow my socials!</h3>
     <a href="https://github.com/nedpfeiffer/" target="_blank"><img src="/images/github.png" alt="Github"></a>
-    <a href="https://www.linkedin.com/in/nedpfeiffer/" target="_blank"><img src="/images/linkedin.png" alt="LinkedIn"></a>
-    <h3>Check out my blog!</h3>
-    <a href="/blog/">Coming soon</a>
-    <a href="/blog">Coming soon</a>
-    <a href="blog">Coming soon</a>
+    <a href="https://www.linkedin.com/in/nedpfeiffer/" target="_blank"><img src="/images/linkedin.png"
+            alt="LinkedIn"></a>
     <h3>Buy me a coffee?</h3>
     <p>XMR: </p>
     <p>BTC: </p>
+    <div class="footer">
+        <p>This website is under active development. Thanks for your understanding!</p>
+    </div>
 </body>
 
 </html>
