--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 
 <body>
     <div class="header">
+        <p><a href="/">English</a> <a href="/es">Español</a></p>
         <h1><a href="/">~/ned.vc</a></h1>
     </div>
     <h2>Welcome to my site!</h2>
     <p>
         My name is Ned, I'm an undergraduate studying psychology and IT. I am
         passionate about cybersecurity, politics, and the impact of technology on
-        society. When I'm not glued to a terminal I also enjoy climbing,
-        swimming, and exploring new cities.
+        society. When I'm not glued to a terminal I also enjoy swimming,
+        climbing, and exploring new cities.
     </p>
     <h3>Check out my blog!</h3>
     <ul>
@@ -32,8 +33,8 @@
     <a href="https://www.linkedin.com/in/nedpfeiffer/" target="_blank"><img src="/images/linkedin.png"
             alt="LinkedIn"></a>
     <h3>Buy me a coffee?</h3>
-        <a href="/donate.html">XMR donations appreciated</a>
-        <div class="footer">
+    <a href="/donate.html">XMR donations appreciated</a>
+    <div class="footer">
         <p>This website is under active development. Thanks for your understanding!</p>
         <p><a href="http://nedvcy7q5qerhcpjdmai52cant3wv3ogeecuq2chij5kjwk645hugbid.onion/">Onion Mirror</a> <a href="pgp.txt">PGP</a> <a href="canary.txt">Canary</a></p>
     </div>
