troubleshooting onion issues

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="header">
-        <p><a href="/">English</a> <a href="/es">Español</a></p>
+        <p><a href="/">English</a> <a href="/es/">Español</a></p>
         <h1><a href="/">~/ned.vc</a></h1>
     </div>
     <h2>Welcome to my site!</h2>
