tweaked footer html/css

--- a/donate.html
+++ b/donate.html
@@ -17,10 +17,10 @@
     <h2>Donate</h2>
     <p>If you think I'm a cool dude, please consider sending some spare XMR</p>
     <h3 style="font-size: medium">46RvL4yPPZKAdLHru1STddVwTpvXhYriJQot1qPkkNaRDSdGhcbW4wuGgmN64U7M5ZZZPddzRk2PtboVuKVkNQLt48KRGc3</h3>
-    <div class="footer">
+    <footer>
         <p>This website is under active development. Thanks for your understanding!</p>
         <p><a href="http://nedvcy7q5qerhcpjdmai52cant3wv3ogeecuq2chij5kjwk645hugbid.onion/">Onion Mirror</a> <a href="pgp.txt">PGP</a> <a href="canary.txt">Canary</a></p>
-    </div>
+    </footer>
 </body>
 
 </html>
