--- a/es/index.html
+++ b/es/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="header">
-        <p><a href="/">English</a> <a href="/es">Español</a></p>
+        <p><a href="/">English</a> <a href="/es/">Español</a></p>
         <h1><a href="/">~/ned.vc</a></h1>
     </div>
     <h2>¡Bienvenido!</h2>
@@ -29,15 +29,16 @@
         <li><a href="/blog/">¡Próximamente estad atentos!</a></li>
     </ul>
     <h3>¡Sigue mis sociales!</h3>
-    <a href="https://github.com/nedpfeiffer/" target="_blank"><img src="/images/github.png" alt="Github"></a>
-    <a href="https://www.linkedin.com/in/nedpfeiffer/" target="_blank"><img src="/images/linkedin.png"
-            alt="LinkedIn"></a>
+    <p>
+        <a href="https://github.com/nedpfeiffer/" target="_blank"><img src="/images/github.png" alt="Github"></a>
+        <a href="https://www.linkedin.com/in/nedpfeiffer/" target="_blank"><img src="/images/linkedin.png" alt="LinkedIn"></a>
+    </p>
     <h3>¿Comprame un café?</h3>
     <a href="/donate.html">Donaciones de XMR apreciadas</a>
-    <div class="footer">
+    <footer>
         <p>Estoy trabajando en este sitio ahora mismo. ¡Gracias por entender!</p>
         <p><a href="http://nedvcy7q5qerhcpjdmai52cant3wv3ogeecuq2chij5kjwk645hugbid.onion/">Espejo Onion</a> <a href="/pgp.txt">PGP</a> <a href="/canary.txt">Canario</a></p>
-    </div>
+    </footer>
 </body>
 
 </html>
