--- a/index.html
+++ b/index.html
@@ -29,15 +29,16 @@
         <li><a href="/blog/">Coming soon</a></li>
     </ul>
     <h3>Follow my socials!</h3>
-    <a href="https://github.com/nedpfeiffer/" target="_blank"><img src="/images/github.png" alt="Github"></a>
-    <a href="https://www.linkedin.com/in/nedpfeiffer/" target="_blank"><img src="/images/linkedin.png"
-            alt="LinkedIn"></a>
+    <p>
+        <a href="https://github.com/nedpfeiffer/" target="_blank"><img src="/images/github.png" alt="Github"></a>
+        <a href="https://www.linkedin.com/in/nedpfeiffer/" target="_blank"><img src="/images/linkedin.png" alt="LinkedIn"></a>
+    </p>
     <h3>Buy me a coffee?</h3>
     <a href="/donate.html">XMR donations appreciated</a>
-    <div class="footer">
+    <footer>
         <p>This website is under active development. Thanks for your understanding!</p>
         <p><a href="http://nedvcy7q5qerhcpjdmai52cant3wv3ogeecuq2chij5kjwk645hugbid.onion/">Onion Mirror</a> <a href="pgp.txt">PGP</a> <a href="canary.txt">Canary</a></p>
-    </div>
+    </footer>
 </body>
 
 </html>
