--- a/error/403.html
+++ b/error/403.html
@@ -14,10 +14,10 @@
     <h1>Error 403 Forbidden</h1>
     <p>Sorry, but it seems like you don't have permission to view this page.</p>
     <p><a href="/">Return home.</a></p>
-    <div class="footer">
+    <footer>
         <p>This website is under active development. Thanks for your understanding!</p>
         <p><a href="http://nedvcy7q5qerhcpjdmai52cant3wv3ogeecuq2chij5kjwk645hugbid.onion/">Onion Mirror</a> <a href="pgp.txt">PGP</a> <a href="canary.txt">Canary</a></p>
-    </div>
+    </footer>
 </body>
 
 </html>
