first blog post

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </p>
     <h3>Check out my blog!</h3>
     <ul>
-        <li><a href="/blog/">Coming soon</a></li>
+        <li><a href="/blog/30_Commits_in_30_Days.html">30 Commits in 30 Days</a></li>
         <li><a href="/blog/">Coming soon</a></li>
         <li><a href="/blog/">Coming soon</a></li>
     </ul>
